<resources>
    <string name="app_name">News Aggregator</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="topics">Topics</string>
    <string name="lang">Language</string>
    <string name="countries">Countries</string>
    <string name="news_title">News Title</string>
    <string name="date">date</string>
    <string name="author_name">author name</string>
    <string name="description">description</string>
    <string name="count">count</string>
</resources>